--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,34 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="{% block description %}{% endblock %}">
+    <meta name="keywords" content="{% block keywords %}{% endblock %}">
+    <link rel="canonical" href="{{request.path}}"/>
+    <link rel="index" href="{% url 'bergane:index' %}"/>
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/icon.png' %}">
+    <link rel="apple-touch-icon" type="image/png" href="{% static 'images/icon.png' %}">
+
+        <!-- ================================
+    Start CSS
+    ================================= -->
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7.0.5/swiper-bundle.min.css">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    {% block extend_header%}{%endblock%}
+    <!-- ================================
+    End CSS
+    ================================= -->
+
     <title>Bergane</title>
 </head>
 <body>
+    {% include 'includes/nav.html' %}
+    <h1>hello</h1>
     {% block content %}
-    
     {% endblock %}
 </body>
 </html>
