--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,13 @@
     <link rel="index" href="{% url 'bergane:index' %}"/>
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/icon.png' %}">
     <link rel="apple-touch-icon" type="image/png" href="{% static 'images/icon.png' %}">
-
-        <!-- ================================
+    <!-- Fontawsome import -->
+    <script src="https://kit.fontawesome.com/96a4d5e388.js" crossorigin="anonymous"></script>
+    <!-- ================================
     Start CSS
     ================================= -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <!-- Imported bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7.0.5/swiper-bundle.min.css">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     {% block extend_header%}{%endblock%}
@@ -27,8 +29,11 @@
 </head>
 <body>
     {% include 'includes/nav.html' %}
-    <h1>hello</h1>
     {% block content %}
     {% endblock %}
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <!-- my own javascripts link -->
+    <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
