--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 /* Utileties */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,400&display=swap');
 
-/* font-family: 'Courier Prime', monospace;
+/* font-family: 'poppins', monospace;
 font-family: 'Heebo', sans-serif; */
 :root {
   --primaryColor: #9C07B6;
@@ -10,7 +10,7 @@ font-family: 'Heebo', sans-serif; */
   --secondaryColor: #F9B000;
   --baseColor: #21243D;
   --baseFont: 'Poppins', sans-serif;
-  --titleFont: 'Poppins', monospace;
+  --titleFont: 'Poppins';
   --regular: 400;
   --medium: 500;
   --bold: 700;
@@ -26,6 +26,39 @@ body {
   line-height: normal;
 }
 
+img {
+  max-width: 100%;
+}
+
+.banner {
+	padding: 180px 0 80px;
+}
+
+.bannerImg {
+  margin-left: 30px;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  position: relative;
+}
+.bannerImg img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  border-radius: 50%;
+  position: relative;
+}
+.bannerImg::before {
+  content: "";
+  position: absolute;
+  left: -5px;
+  top: 13px;
+  width: 100%;
+  height: 100%;
+  background-color: #EDF7FA;
+  border-radius: 50%;
+}
 
 input[type=text], input[type=email], select, textarea {
   width: 100%;
@@ -36,4 +69,125 @@ input[type=text], input[type=email], select, textarea {
   margin-top: 6px;
   margin-bottom: 16px;
   resize: vertical
+}
+
+.nav-item{
+  position: relative;
+  display: inline-block;
+  padding: 0 10px;
+  cursor: pointer;
+}
+
+.nav-link {
+  text-transform: uppercase;
+  font-size: 20px;
+  position: relative;
+  color: var(--primaryColor);
+  font-weight: 900;
+}
+
+.nav-link::before{
+  content: attr(data-text);
+  position: absolute;
+  color: #fff;
+  width: 0;
+  overflow: hidden;
+  transition: 0.6s;
+}
+
+.nav-link:hover{
+  color: #ccc;
+  transition: ease-in .5s;
+}
+
+.nav-item::before{
+  content: '';
+  width: 0;
+  height: 100%;
+  position: absolute;
+  background: var(--primaryDarkColor);
+  right: 0;
+  top: 0;
+  transition: 0.6s;
+}
+
+.nav-item:hover .nav-link::before,
+.nav-item:hover::before{
+  width: 100%;
+}
+
+.icons{
+  justify-content: center;
+  display: flex;
+}
+
+.icons a {
+  margin: 20px 20px;
+  text-decoration: none;
+  color: var(--primaryColor);
+  display: block;
+  position: relative;
+}
+
+.icons a .layer{
+  width: 30px;
+  height: 30px;
+  transition: transform 0.3s;
+}
+
+.icons a:hover .layer{
+  transform: rotate(-35deg) skew(20deg);
+}
+.icons a .layer span{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  border: 1px solid var(--primaryDarkColor);
+  border-radius: 5px;
+  transition: all 0.3s;
+}
+
+.icons a:hover .layer span:nth-child(1){
+  opacity: 0.2;
+}
+.icons a:hover .layer span:nth-child(2){
+  opacity: 0.3;
+  transform: translate(5px, -5px);
+}
+.icons a:hover .layer span:nth-child(3){
+  opacity: 0.6;
+  transform: translate(10px, -10px);
+}
+.icons a:hover .layer span:nth-child(4){
+  opacity: 0.8;
+  transform: translate(15px, -15px);
+}
+.icons a:hover .layer span:nth-child(5){
+  opacity: 1;
+  transform: translate(20px, -20px);
+}
+
+.icons a .layer span.fab{
+  font-size: 15px;
+  line-height: 35px;
+  text-align: center;
+}
+
+.icons a .layer span{
+  box-shadow: -1px 1px 3px var(--primaryHoverColor);
+}
+.icons a .text{
+  position: absolute;
+  left: 50%;
+  bottom: -5px;
+  opacity: 0;
+  transform: translateX(-50%);
+  transition: bottom 0.3s ease, opacity 0.3s ease;
+}
+
+.icons a:hover .text{
+  bottom: -10px;
+  opacity: 1;
 }
