--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,19 @@
                         <img src="{{me.userprofile.avatar.url}}" alt="{{me.first_name|title}} {{me.last_name|title}} avatar">
                     </div>
                 </div>
+                <div class="col-md">
+                    <div class="bannerContent">
+                        <h1 class="xlTitle pb-3">Hej, jag heter {{me.first_name|title}}, <br> jag är en {{me.userprofile.title}} </br></h1>
+                        <p>{{me.userprofile.bio}}</p>
+                        <div class="bannerBtnCol">
+                            <div class="row">
+                                <div class="col-auto">
+                                    <a download href="{{me.userprofile.cv.url}}" class="btn btnPrimary" target="_blank">Ladda ner CV.</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
