--- a/templates/index.html
+++ b/templates/index.html
@@ -17,15 +17,66 @@
                 </div>
                 <div class="col-md">
                     <div class="bannerContent">
-                        <h1 class="xlTitle pb-3">Hej, jag heter {{me.first_name|title}}, <br> jag är en {{me.userprofile.title}} </br></h1>
+                        <h1 class="xlTitle pb-3">Hej, jag heter {{me.first_name|title}}, <br> jag är sertifierad {{me.userprofile.title}} </br></h1>
                         <p>{{me.userprofile.bio}}</p>
                         <div class="bannerBtnCol">
                             <div class="row">
                                 <div class="col-auto">
-                                    <a download href="{{me.userprofile.cv.url}}" class="btn btnPrimary" target="_blank">Ladda ner CV.</a>
+                                    <a download href="{{me.userprofile.cv.url}}" class="btn btnPrimary" target="_blank">Ladda ner CV</a>
+                                </div>
+                                <div class="col-auto">
+                                    <a href="{% url 'bergane:contact' %}" class="btn btnOutline">Kontakta mig</a>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="sectionSpace pt-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-auto">
+                    <div class="keySkillCol">
+                        <h4 class="smTitleCol">Nyckel Färdigheter</h4>
+                            {% for sk in me.userprofile.skills.all %}
+                            {% if sk.is_key_skill %}
+                            <div class="keySkillCard">
+                                {% if sk.image %}
+                            <div class="ksIconCol">
+                                <img src="{{sk.image.url}}" alt="...">
+                            </div>
+                                {% endif %}
+                                <span class="ksText">{{sk.name}}</span>
+                            </div>
+                            {% endif %}
+                            {% endfor %}
+                    </div>
+                </div>
+                <div class="col-md">
+                    <h4 class="smTitle pb-3">Kodning Färdigheter</h4>
+                    <div class="progressCol">
+                      <div class="progressCard">
+                        {% for sk in me.userprofile.skills.all %}
+
+                        <div class="progressCol">
+                          <span class="progressLbl">{{sk.name}}</span>
+                          <div class="row g-2 align-items-center">
+                            <div class="col">
+                              <div class="progress progressStyle">
+                                <div class="progress-bar" role="progressbar" style="width: {{sk.score}}%" aria-valuenow="{{sk.score}}" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div>
+                            </div>
+                            <div class="col-auto">
+                              <span class="pLbl">{{sk.score}}%</span>
+                            </div>
+                          </div>
+                        </div>
+                        {% endfor %}
+                    </div>
                     </div>
                 </div>
             </div>
