--- a/templates/index.html
+++ b/templates/index.html
@@ -83,5 +83,41 @@
         </div>
     </div>
 </section>
+<section>
+    <div class="sectionSpaceSm lightBg">
+        <div class="container">
+            <div class="row pb-3">
+                <div class="col">
+                    <h4 class="smText regular">Certifikat</h4>
+                </div>
+            </div>
+            <div class="sliderOuter">
+                <div class="swiper certificatesSlider">
+                    <div class="swiper-wrapper">
+                        {% for c in certificates %}
+                        {% if c.is_active %}
+                        <div class="swiper-slide">
+                            <div class="cardStyle1">
+                                <h4 class="mdTitle cs1Title">
+                                    <a href="">{{c.title}}</a>
+                                </h4>
+                                <ul class="cardOptionCol">
+                                    <li>{{c.date.date}}</li>
+                                    <li>{{c.name|title}}</li>
+                                  </ul>
+                                  <p>{{c.description}}</p>
+                                </div>
+                              </div>
+                              {% endif %}
+                              {% endfor %}
+                              
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 {% endblock %}
