--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -2,7 +2,7 @@
 <!-- ================================
 Start Footer Bar
 ================================= -->
-<footer class="footer fixed-bottom">
+<footer class="footer">
     <p class="m-0 text-center">Made by CBergane Follow me:</p>
         <div class="icons">
             <a href="https://www.facebook.com/christian.bergane" target="_blank">
