--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,8 +15,8 @@ font-family: 'Heebo', sans-serif; */
   --medium: 500;
   --bold: 700;
   --black: 900;
-  --lightBg: #F1F1F1;
-  --bs-white: #ffffe0;
+  --lightBg: #737373;
+  --bs-white: #ffffffec;
 }
 
 html {
@@ -141,10 +141,14 @@ a, .btn {
 .bannerBtnCol {
 	padding-top: 15px;
 }
+.innerPageBannerCol {
+	padding: 180px 0 150px;
+}
 
 .sectionSpace {
   padding: 80px 0;
 }
+
 .sectionSpaceSm {
   padding: 35px 0;
 }
@@ -335,6 +339,72 @@ input[type=text], input[type=email], select, textarea {
 }
 
 /* End Certificates */
+
+/* Portfolio */
+
+.portfolioOption li {
+  display: inline-block;
+  padding-right: 20px;
+}
+.portfolioOption {
+	padding: 5px 0 16px;
+}
+.portfolioContentCol > p:last-child {
+  margin-bottom: 0;
+}
+.portfolioImgCol img {
+  border-radius: 6px;
+  width: 246px;
+  height: 184px;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+.portfolioCard {
+  padding: 20px 0;
+  border-bottom: 1px solid #E0E0E0;
+}
+
+.dateLbl {
+	display: inline-block;
+	padding: 4px 12px;
+	background-color: #142850;
+	border-radius: 20px;
+	color: #fff;
+	font-size: 18px;
+	line-height: 1;
+	font-weight: var(--bold);
+}
+
+/* Portfolio ends */
+
+/* Testimonials */
+
+.testimonialCol {
+  padding-top: 35px;
+}
+.tContentCol > p:last-child {
+  margin-bottom: 0;
+}
+.tImgCol {
+	width: 95px;
+	height: 95px;
+	margin-right: 5px;
+	border-radius: 50%;
+}
+.tImgCol img {
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+}
+.testimonialSlider {
+	padding: 30px 0;
+  position: relative;
+}
+.testimonialSlider .swiper-slide {
+  padding: 0 40px;
+}
+
+/* Testimonials end */
 
 /* Footer */
 
