--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,45 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block title %} Bergane - Kontakte mig {% endblock %}
+{% block decription %}Kontakta mig{% endblock %}
+{% block keywords %}{% endblock %}
+
 {% block content %}
 
-<h1>contact</h1>
+
+<section>
+    <div class="innerPageBannerCol">
+      <div class="container">
+        <div class="row g-4 g-md-3  align-items-center">
+          <div class="col-md-6">
+            <div class="bannerContent">
+              <h1 class="xlTitle pb-md-3">Kontakta mig</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section>
+    <div class="lightBg">
+      <div class="container">
+          <form id="contactForm" method="POST" action="/contact/">
+          {% csrf_token %}
+              <label for="name">Namn</label>
+              {{form.name}}
+  
+              <label for="email">Email</label>
+              {{form.email}}
+  
+              <label for="subject">Meddelande</label>
+              {{form.message}}
+  
+              <input class='btn btnPrimary' type="submit" value="Submit">
+          </form>
+      </div>
+    </div>
+  </section>
 
 {% endblock %}
