--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -11,7 +11,7 @@ Start Navigation Bar
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="{%url 'bergane:index'%}">Home</a>
+            <a class="nav-link" aria-current="page" href="{%url 'bergane:index'%}">Hem</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{%url 'bergane:portfolios' %}">Portfolio</a>
@@ -20,7 +20,7 @@ Start Navigation Bar
             <a class="nav-link" href="{% url 'bergane:blogs' %}">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{%url 'bergane:contact'%}">Contact</a>
+            <a class="nav-link" href="{%url 'bergane:contact'%}">Kontakt</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
