--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Bergane - Home {% endblock %}
+{% block title %} Bergane - Hem {% endblock %}
 {% block description %}{% endblock %}
 
 {% block content %}
@@ -90,7 +90,6 @@
           <div class="col">
             <h4 class="smText regular">Certificates</h4>
           </div>
-  
         </div>
         <div class="sliderOuter">
           <div class="swiper certificatesSlider">
@@ -111,12 +110,113 @@
               </div>
               {% endif %}
               {% endfor %}
-              
             </div>
           </div>            
           <div class="cert-swiper-button-next swiper-button-next swiperBtnStyle"></div>
           <div class="cert-swiper-button-prev swiper-button-prev swiperBtnStyle"></div>
           <div class="swiper-pagination swiperPaginationStyle posInitial"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="sectionSpace">
+      <div class="container">
+        <div class="portfolioCol">
+          <div class="row pb-3">
+            <div class="col">
+              <h4 class="smText regular">Projekt</h4>
+            </div>
+            <div class="col-auto">
+              <a href="{% url 'bergane:portfolios' %}" class="simpleLink">Se alla</a>
+            </div>
+          </div>
+          {% for p in portfolio %}
+          {% if p.is_active %}
+          <div class="portfolioCard">
+            <div class="row g-4 align-item-center">
+              <div class="col-md-auto">
+                <div class="portfolioImgCol">
+                  <a href="{% url 'bergane:portfolio' slug=p.slug %}"><img src="{{p.image.url}}" alt="portfolio image" class="shadow-lg rounded"></a>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="portfolioContentCol">
+                  <h4 class="lgTitle"><a href="{% url 'bergane:portfolio' slug=p.slug %}">{{p.name}}</a></h4>
+                  <ul class="portfoliOption">
+                    <li><span class="dateLbl">{{p.date.year}}</span></li>
+                  </ul>
+                  <p>{{p.description}}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          {% endif %}
+          {% endfor %}
+        </div>
+        <div class="testimonialCol">
+          <h4 class="smText regular d-block">Omdömen</h4>
+          <div class="testimonialSlider">
+            <div class="swiper testimonialSwiper">
+              <div class="swiper-wrapper">
+                {% for t in testimonials %}
+                {% if t.is_active %}
+                <div class="swiper-slide">
+                  <div class="testimonialCard">
+                    <div class="row align-items-center">
+                      <div class="col-sm-auto">
+                        <div class="tImgCol">
+                          <img src="{{t.thumbnail.url}}" alt="...">
+                        </div>
+                      </div>
+                      <div class="col-sm">
+                        <div class="tContentCol">
+                          <h4 class="xsTitle bold">{{t.name}} - {{t.role}}</h4>
+                          <p>{{t.quote}}</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                {% endif %}
+                {% endfor %}
+  
+              </div>
+              <div class="test-swiper-button-next swiper-button-next swiperBtnStyle"></div>
+              <div class="test-swiper-button-prev swiper-button-prev swiperBtnStyle"></div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+
+  <section>
+    <div class="sectionSpaceSm bg-secondary-subtle">
+      <div class="container">
+        <div class="row pb-3">
+          <div class="col">
+            <h4 class="smText regular">Senaste inlägg</h4>
+          </div>
+          <div class="col-auto">
+            <a href="{% url 'bergane:blogs' %}" class="simpleLink">Se alla</a>
+          </div>
+        </div>
+        <div class="row g-3">
+          {% for b in blogs %}
+          {% if b.is_active %}
+            <div class="col-lg-6">
+              <div class="cardStyle1">
+                <h4 class="mdTitle cs1Title"><a href="{% url 'bergane:blog' slug=b.slug %}">{{b.name}}</a></h4>
+                <ul class="cardOptionCol">
+                  <li>{{b.timestamp.date}}</li>
+                  <li>{{b.author}}</li>
+                </ul>
+                <p>{{b.description}}</p>
+              </div>
+            </div>
+          {% endif %}
+          {% endfor %}
         </div>
       </div>
     </div>
