--- a/templates/base.html
+++ b/templates/base.html
@@ -40,5 +40,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <!-- my own javascripts link -->
     <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+
+    <!-- Own script to close message -->
+    <script>
+        setTimeout(function () {
+           $('#msg').hide('fade');
+           }, 3000);
+         
+      </script>
 </body>
 </html>
