--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
       <div class="container">
         <div class="row pb-3">
           <div class="col">
-            <h4 class="smText regular">Certificates</h4>
+            <h4 class="smText regular">Certifikat</h4>
           </div>
         </div>
         <div class="sliderOuter">
@@ -96,7 +96,7 @@
             <div class="swiper-wrapper">
               {% for c in certificates %}
               {% if c.is_active %}
-              <div class="swiper-slide">
+              <div class="swiper-slide ">
                 <div class="cardStyle1">
                   <h4 class="mdTitle cs1Title">
                     <a href="">{{c.title}}</a>
@@ -185,6 +185,9 @@
               <div class="test-swiper-button-next swiper-button-next swiperBtnStyle"></div>
               <div class="test-swiper-button-prev swiper-button-prev swiperBtnStyle"></div>
             </div>
+  
+  
+          </div>
         </div>
       </div>
     </div>
