--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,6 +1,48 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block title %} Bergane - Blog {% endblock %}
+{% block decription %}Kontakta mig{% endblock %}
+{% block keywords %}{% endblock %}
 {% block content %}
 
-<h1>blog</h1>
+<section>
+    <div class="innerPageBannerCol">
+        <div class="container">
+            <div class="row g-4 g-md-3 align-item-center">
+                <div class="col-md-6">
+                    <div class="bannerContent">
+                        <h1 class="x1Title pb-md-4">
+                            Mina senaste inlägg.
+                        </h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="bg-secondary-subtle">
+        <div class="container">
+            <div class="portfolioContentMain">
+                <div class="row g-3 g-md-4 g-lg-5 portfolioRow">
+                    {% for obj in object_list %}
+                    <div class="col-md-6 pColMain">
+                        <div class="pCol">
+                            <h4 class="smText regular">{{obj.name}}</h4>
+                            <div class="col-md">
+                                <h4 class="smTitle pb-3">{{obj.timestamp|date}}</h4>
+                            </div>
+                            <a href="{% url 'bergane:blog' slug=obj.slug %}" >
+                            <img src="{{obj.image.url}}" class="pImg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 {% endblock %}
