--- a/templates/portfolio-detail.html
+++ b/templates/portfolio-detail.html
@@ -1,6 +1,29 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block title %} Bergane - Portfolio {% endblock %}
+{% block decription %}{% endblock %}
+{% block keywords %}{% endblock %}
 {% block content %}
-
-<h1>portfolio details</h1>
+<section>
+    <div class="innerPageBannerCol">
+      <div class="container">
+        <div class="row g-4 g-md-3  align-items-center">
+          <div class="col-md-6">
+            <div class="bannerContent">
+              <h1 class="xlTitle pb-md-3">{{object.name}}</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section>
+    <div class="sectionSpaceSm">
+      <div class="container">
+        {{object.body|safe}}
+      </div>
+    </div>
+  </section>
 
 {% endblock %}
