--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,6 +1,40 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block title %} Bergane - Portfolio {% endblock %}
+{% block decription %}{% endblock %}
+{% block keywords %}{% endblock %}
 {% block content %}
 
-<h1>Portfolio</h1>
+<section>
+    <div class="innerPageBannerCol">
+        <div class="container">
+            <div class="row g-4 g-md-3 align-item-center">
+                <div class="col-md-6">
+                    <h1 class="x1Title pb-md-3">Mina senaste project</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="bg-secondary-subtle">
+        <div class="container">
+            <div class="portfolioContentMain">
+                <div class="row g-3 g-md-3 g-lg-5 portfolioRow">
+                    {% for obj in object_list %}
+                    <div class="col-md-6 pColMain">
+                        <div class="pCol">
+                            <a href="{% url 'bergane:portfolio' slug=obj.slug %}">
+                                <img src="{{obj.image.url}}" class="pImg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 {% endblock %}
