--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="{% block keywords %}{% endblock %}">
     <link rel="canonical" href="{{request.path}}"/>
     <link rel="index" href="{% url 'bergane:index' %}"/>
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/icon.png' %}">
-    <link rel="apple-touch-icon" type="image/png" href="{% static 'images/icon.png' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
+    <link rel="apple-touch-icon" type="image/png" href="{% static 'images/favicon.ico' %}">
     <!-- Fontawsome import -->
     <script src="https://kit.fontawesome.com/96a4d5e388.js" crossorigin="anonymous"></script>
     <!-- ================================
