added some style to buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,10 +22,10 @@
                         <div class="bannerBtnCol">
                             <div class="row">
                                 <div class="col-auto">
-                                    <a download href="{{me.userprofile.cv.url}}" class="btn btnPrimary" target="_blank">Ladda ner CV</a>
+                                    <a download href="{{me.userprofile.cv.url}}" class="btn btnPrimary rounded" target="_blank">Ladda ner CV</a>
                                 </div>
                                 <div class="col-auto">
-                                    <a href="{% url 'bergane:contact' %}" class="btn btnOutline">Kontakta mig</a>
+                                    <a href="{% url 'bergane:contact' %}" class="btn btnOutline rounded">Kontakta mig</a>
                                 </div>
                             </div>
                         </div>
