--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="col-md">
-          <h4 class="smTitle pb-3">Jag erhåller kompetens inom:</h4>
+          <h4 class="smTitle pb-3">Jag erhåller kunskap inom:</h4>
           <div class="progressCol">
             <div class="progressCard">
               {% for sk in me.userprofile.skills.all %}
