--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="col-md">
                     <div class="bannerContent">
-                        <h1 class="xlTitle pb-3">Hej, jag heter {{me.first_name|title}}, <br> jag är sertifierad {{me.userprofile.title}} </br></h1>
+                        <h1 class="xlTitle pb-3">Hej, jag heter {{me.first_name|title}}, <br> jag är certifierad {{me.userprofile.title}} </br></h1>
                         <p>{{me.userprofile.bio}}</p>
                         <div class="bannerBtnCol">
                             <div class="row">
