--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -133,12 +133,13 @@ a, .btn {
 	text-align: right;
 }
 .navCol a {
-	font-size: 20px;
-	color: #000;
-  font-weight: var(--medium);
-  display: inline-block;
+  --underlineWidth: 0%;
   position: relative;
+  display: inline-block;
+  padding-bottom: 5px; /* Justera vid behov */
+  overflow: hidden;
 }
+
 .navCol a:hover {
   color: var(--primaryColor);
 }
@@ -156,20 +157,46 @@ a, .btn {
   transition: all 500ms ease-in-out 0s;
   opacity: 0;
 }
+
+.navCol a::after {
+  content: '';
+  position: absolute;
+  width: var(--underlineWidth);
+  height: 2px; /* Justera tjockleken på understrykningen */
+  background: var(--primaryColor); /* Färg på understrykningen */
+  transition: width 0.3s;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.navCol a:hover::after,
+.navCol a.active::after {
+    width: 100%;
+}
+
 .navCol a.active::before {
+  -webkit-transition: all 500ms ease-in-out 0s;
+  -o-transition: all 500ms ease-in-out 0s;
+  transition: all 500ms ease-in-out 0s;
   opacity: 1;
-  width: 27px;
+  width: 100%;
   right: auto;
   left: 0;
 }
+
 .navCol a:hover::before {
   opacity: 1;
   left: 0;
   right: 0;
 }
+
 .navCol a.active {
+  font-weight: bold; /* valfritt, för stil på aktiv sida */
+  --underlineWidth: 100%;
   color: var(--primaryColor);
 }
+
 .navCol li {
 	display: inline-block;
 }
